# blockMatcher

./: .gitignore  360 video 1 run  360 video 2 run  TDLS.py  Utils.py  analyze_data.py  check_functions.py  construct_prediction.py  cost_functions.py  delete this.py  dictionary.py  drone.py  exp(axis=x fovx=100 fovy=500 cx=cy=500)  exp(axis=y fovx=100 fovy=50 cx=cy=500)  exp(axis=y fovx=50 fovy=100 cx=cy=500)  formula on syn1  formula.py  frame10.txt  main.py  motion_vectors_angle.py  mv_compare.py  optitrack_expression  run1  syntetic.py  synthetic_expressions  test.py  test2.py  three_step_search.py  try_algorithems_with_RPI_blocks.py  utils.py  y_rot.txt
Benchmarks/: hatul.py
Benchmarks/Checkboard Video/: checkboard.h264
C++ Code/extract motion vectors/: CMakeLists.txt
Dictionary/: dictionary.py  main.py  noise_handling.py  test.py
Dictionary Testing/: artur_code.py  data_generator.py  data_projection.py  distance_historgrams.py  main.py  markers.py  mv_dictionary.py  spider.ply  syntetic.py  tello_console.py
Dictionary Testing/trained dicts/: gradient
Dictionary/data/: create_data.py  create_drone_video.py  create_gradient.py  create_synthetic_2D.py
Dictionary/images/: gradient.py  synthetic2D.py  synthetic3D.py
Dictionary/optitrack/: RecordOptitrack.cpp  process_optitrack_data.py
Dictionary/saved dictionaries/: data1  gradient_1  gradient_2  gradient_5  gradient_6  gradient_7  optitrack_1  optitrack_2  synthetic_1  synthetic_2  synthetic_3.dict  synthetic_4.dict  synthetic_5.dict  synthetic_6.dict  synthetic_7.dict
Drone/: markers.cpp  natnet.py
Lab Testing Phase 1/: data_generator.py  main.py  mv_dictionary.py
block_matching/: __init__.py  block_partitioning.py  cost_functions.py  main.py
data/: create_data.py  create_optitrack_data.py  create_synthetic_data.py  create_vr_data.html  x_rotation.exp  y_rotation.exp  z_rotation.exp
data/360/: info.txt  (+9 more)
output/: frame0.txt  frame1.txt  frame10.txt  frame100.txt  frame101.txt  frame102.txt  frame103.txt  frame104.txt  frame105.txt  frame106.txt  frame107.txt  frame108.txt  frame109.txt  frame11.txt  frame110.txt  frame111.txt  frame112.txt  frame113.txt  frame114.txt  frame115.txt  frame116.txt  frame117.txt  frame118.txt  frame119.txt  frame12.txt  frame120.txt  frame121.txt  frame122.txt  frame123.txt  frame124.txt  frame125.txt  frame126.txt  frame127.txt  frame128.txt  frame129.txt  frame13.txt  frame130.txt  frame131.txt  frame132.txt  frame133.txt  (+192 more)
python_block_matching/: __init__.py  algorithms.py  block_matching.py  block_partitioning.py  cost_functions.py  main.py  tdls.py  utils.py
(+378 files in other folders)
